src/pages/AnimeList/components/AnimeCards/AnimeCards.css
.anime-card {
    background: #1e293b;
    border: 2px solid #1f2937;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    width: 200px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
    transition: transform 0.2s, box-shadow 0.2s;
    min-height: 455px;
    max-height: 700px;
  }
  
  .anime-card:hover {
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
  }

  .anime-card-images{
    height: 288px;
    position: relative;
  }
  
  .image-anime {
    width: 100%;
    height: 15rem;
    object-fit: cover;
    flex-shrink: 0;
  }

  .image-rating{
    position: absolute;
    top: 258px;
    left: 0px; 
    width: 30px; 
    z-index: 1;
  }

  .anime-card-content {
    padding: 10px;
    text-align: center;
    flex-grow: 1;
    display: flex; 
    flex-direction: column; 
    justify-content: space-between;
  }
  
  .anime-card-title {
    font-size: 1rem;
    font-weight: bold;
    color: #38bdf8;
    margin-bottom: 10px;
    display: -webkit-box; 
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical; 
    overflow: hidden; 
    text-overflow: ellipsis;
  }

  .anime-card:has(.long-title):hover .anime-card-title{
    -webkit-line-clamp: 7;
    line-clamp: 7;
    font-size: 0.7rem; 
    white-space: normal; 
    word-wrap: break-word;
  }
  
  .anime-card-descriptions {
    font-size: 0.8rem;
    color: #f8d538;
    margin-bottom: 15px;
  }
  
  .anime-card-links {
    display: flex;
    justify-content: space-between;
    padding: 5px;
  }
  
  @media (max-width: 990px) {
      .anime-card-title{
        display: flex;
        justify-content: center;
      }
  }

